# Space-Invaders

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Src/: Game.cpp  Game.h  main.cpp
src/: Game.cpp  Game.h  Projectile.cpp  Projectile.h  Queue.cpp  Queue.h  Wave.cpp  Wave.h  main.cpp
src/GameStates/: GameMenu.cpp  GameMenu.h  GamePlay.cpp  GamePlay.h  GameStateBase.cpp  GameStateBase.h
src/Helper/: Helper.cpp  Helper.h  TextOption.cpp  TextOption.h
src/Player/: Player.cpp  Player.h
src/Ships/: ShipBasic.cpp  ShipBasic.h
